--- a/_includes/nav_compact.html
+++ b/_includes/nav_compact.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-2 col-3">
         <a href="/" class="btn btn-outline-light">
-          <img class="rounded-circle w-100 h-100" awidth="330" height="310" lt="Profile picture" src="{{ "/assets/images/photo_linkedin.webp" | relative_url }}" />
+          <img class="rounded-circle w-100 h-100" awidth="330" height="310" lt="Profile picture" src="{{ "/assets/images/photo_linkedin.webp" | prepend: site.baseurl_root }}" />
         </a>
       </div>
       <div class="col-md-8 col-6">
@@ -14,8 +14,8 @@
       <div class="col-md-2 col-3 d-flex row">
         <ul class="list-unstyled align-self-end flex-column col-12 row">
           <li class="col-12"><a class="badge bg-light text-dark" href="https://linkedin.com/in/amaury-butaux"><span class="nav-other-websites-desc bi bi-linkedin"> LinkedIn</span></a></li>
-          <li class="col-12"><a class="badge bg-light text-dark" href="https://oramy.itch.io"><img width="13.33" height="12" src="{{"/assets/images/itchio-textless-black.svg" | relative_url }}" alt="itch.io icon" class="inline-image"/><span class="nav-other-websites-desc"> itch.io</span></a></li>
-          <li class="col-12"><a class="badge bg-light text-dark" href="{{"/resume.pdf" | relative-url}}"><span class="nav-other-websites-desc bi bi-file-person"> Resume</span></a></li>
+          <li class="col-12"><a class="badge bg-light text-dark" href="https://oramy.itch.io"><img width="13.33" height="12" src="{{"/assets/images/itchio-textless-black.svg" | prepend: site.baseurl_root }}" alt="itch.io icon" class="inline-image"/><span class="nav-other-websites-desc"> itch.io</span></a></li>
+          <li class="col-12"><a class="badge bg-light text-dark" href="{{"/resume.pdf" | relative-url}}"><span class="nav-other-websites-desc bi bi-file-person"> {% t nav.resume %}</span></a></li>
         </ul>
       </div> 
     </div>
@@ -24,14 +24,14 @@
     <div class="row">
       <div class="col-3">
         <a href="/" class="btn btn-outline-light">
-          <img class="rounded-circle w-100 h-100" width="330" height="310" alt="Profile picture" src="{{ "/assets/images/photo_linkedin.webp" | relative_url }}" />
+          <img class="rounded-circle w-100 h-100" width="330" height="310" alt="Profile picture" src="{{ "/assets/images/photo_linkedin.webp" | prepend: site.baseurl_root }}" />
         </a>
       </div>
       <div class="col-9 d-flex row">
         <ul class="list-unstyled align-self-end col-12 row">
           <li class="col-4"><a class="py-3 d-inline-block" href="https://linkedin.com/in/amaury-butaux"><span class="badge bg-light text-dark nav-other-websites-desc bi bi-linkedin"> LinkedIn</span></a></li>
-          <li class="col-4"><a class="py-3 d-inline-block" href="https://oramy.itch.io"><span class="badge bg-light text-dark"><img width="13.33" height="12" src="{{"/assets/images/itchio-textless-black.svg" | relative_url }}" alt="itch.io icon" class="inline-image"/><span class="nav-other-websites-desc"> itch.io</span></span></a></li>
-          <li class="col-4"><a class="py-3 d-inline-block" href="{{"/resume.pdf" | relative-url}}"><span class="badge bg-light text-dark nav-other-websites-desc bi bi-file-person"> Resume</span></a></li>
+          <li class="col-4"><a class="py-3 d-inline-block" href="https://oramy.itch.io"><span class="badge bg-light text-dark"><img width="13.33" height="12" src="{{"/assets/images/itchio-textless-black.svg" | prepend: site.baseurl_root }}" alt="itch.io icon" class="inline-image"/><span class="nav-other-websites-desc"> itch.io</span></span></a></li>
+          <li class="col-4"><a class="py-3 d-inline-block" href="{{"/resume.pdf" | relative-url}}"><span class="badge bg-light text-dark nav-other-websites-desc bi bi-file-person"> {% t nav.resume %}</span></a></li>
         </ul>
       </div> 
       <div class="col-12">
