--- a/_includes/project_list.html
+++ b/_includes/project_list.html
@@ -2,6 +2,8 @@
 {% assign index = 0 %}
 {% for project_hash in include.projects %}
 {% assign project = project_hash[1] %}
+{% assign project_id = project_hash[0] %}
+{% assign tproject = site.data.i18n.[site.lang].projects[project_id] %}
 {% unless project.hidden %}
 {% assign index = index | plus: 1 %}
 <div class="col py-0 my-0">
@@ -17,12 +19,12 @@
                             <source type="image/webp" srcset="{{imageFile[0]}}.webp">
                         {% endunless %}
                         <source type="image/{{imageFile[1]}}" srcset="{{imageFile[0]}}.{{imageFile[1]}}">
-                        <img class="card-img-top fill-image h-100" width="16" height="9" src="{{ project.thumbnail | relative_url }}" alt="{{ project.title }}">
+                        <img class="card-img-top fill-image h-100" width="16" height="9" src="{{ project.thumbnail | prepend: site.baseurl_root }}" alt="{{ project.title }}">
                     </picture>
                 </div>
                 <div class="card-body preserve-3D">
-                <h3 class="card-title text-dark translateZ-10">{{ project.title }}</h3>
-                <p class="card-text text-dark translateZ-5">{{ project.short-description }}</p>
+                <h3 class="card-title text-dark translateZ-10">{{ tproject.title }}</h3>
+                <p class="card-text text-dark translateZ-5">{{ tproject.short-description }}</p>
                     <div class="p-0 mt-auto" >
                         {% include badges.html badges=project.badges %}
                     </div>
@@ -37,11 +39,11 @@
                                 <source type="image/webp" srcset="{{imageFile[0]}}.webp">
                             {% endunless %}
                             <source type="image/{{imageFile[1]}}" srcset="{{imageFile[0]}}.{{imageFile[1]}}">
-                            <img class="card-img card-img-back" width="649" height="365" src="{{ project.big-thumbnail | relative_url }}" alt="{{ project.title }}">
+                            <img class="card-img card-img-back" width="649" height="365" src="{{ project.big-thumbnail | prepend: site.baseurl_root }}" alt="{{ project.title }}">
                         </picture>
                     </div>
                     <div class="card-back-text d-flex">
-                        <div class="card-title text-dark display-5 text-center bg-light py-3 w-100 my-auto fs-3">{{ project.title }}</div>
+                        <div class="card-title text-dark display-5 text-center bg-light py-3 w-100 my-auto fs-3">{{ tproject.title }}</div>
                     </div>
                 </div>
             </div>
