--- a/_includes/alt-home.html
+++ b/_includes/alt-home.html
@@ -13,7 +13,7 @@
       <!-- Example row of columns -->
       <div class="row justify-content-center">
         <div class="col-lg-3 col-md-4 col-6">
-          <img class="rounded-circle col-12 img-fluid" src="{{ "/assets/images/updated_profile_picture.webp" | relative_url }}" />
+          <img class="rounded-circle col-12 img-fluid" src="{{ "/assets/images/updated_profile_picture.webp" | prepend: site.baseurl_root }}" />
         </div>
         <div class="col-md-6 my-3">
           <h1>Who am I?</h1>
