translation wip + redesign wip

--- a/_includes/alt-home.html
+++ b/_includes/alt-home.html
@@ -3,7 +3,7 @@
   <div class="fat-container px-4 py-5 bg-dark">
     <h1 class="display-3 mb-5 text-center text-light">Games</h1>
     {% assign sorted_projects = site.data.projects | sort %}
-    {% include project_list.html projects=sorted_projects %}
+    {% include project-list.html projects=sorted_projects %}
   </div>
 </div>
 <hr class="my-5">
