--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <footer class="pt-3 mt-4 my-auto">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="{% translate_link homen %}" class="nav-link px-2 text-light">{% t pages.home %}</a></li>
+        <li class="nav-item"><a href="{% tl home %}" class="nav-link px-2 text-light">{% t pages.home %}</a></li>
         <!--<li class="nav-item"><a href="/project_library" class="nav-link px-2 text-muted">Project Library</a></li>-->
       </ul>
         <div class="nav justify-content-center">
