--- a/_includes/home.html
+++ b/_includes/home.html
@@ -24,7 +24,7 @@
 <div class="fat-container px-4 py-5">
   <h2 class="display-3 mb-5 text-center">{{ titles.games }}</h2>
   {% assign sorted_projects = site.data.projects | sort %}
-  {% include project_list.html projects=sorted_projects %}
+  {% include project-list.html projects=sorted_projects %}
 </div>
 <!--
 <hr class="my-5">
