--- a/_includes/project-list.html
+++ b/_includes/project-list.html
@@ -8,7 +8,7 @@
 {% assign index = index | plus: 1 %}
 <div class="col py-0 my-0">
 <div class="card h-100 p-0 text-left">
-    <a class="clickable-card link-unstyled bg-light" href="{{project.dedicated-page}}">
+    <a class="clickable-card link-unstyled bg-light" href="{% tl {{project.dedicated-page}} %}">
         <div class="card-content">
             <div class="card-mouse-anim">
             <div class="face-back bg-light preserve-3D">
