--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -4,7 +4,7 @@
   {%- include head.html -%}
 
   <body class="pb-0 pt-0">
-    {% include nav_compact.html %}
+    {% include nav-compact.html %}
     {{ content }}
     {%- include other-projects.html -%}
     {%- include footer.html -%}
