--- a/_includes/featured-carousel.html
+++ b/_includes/featured-carousel.html
@@ -45,7 +45,7 @@
         </div>
         <div class="d-flex px-2">
           <div class="d-flex align-items-end">
-            <a class="btn btn-lg btn-primary" href="{{ project.dedicated-page | default: "#" }}" role="button">Project page</a>
+            <a class="btn btn-lg btn-primary" href="{% tl {{ project.dedicated-page | default: "#" }} %}" role="button">{% t project-page %}</a>
           </div>
           <div class="ms-auto d-flex flex-column flex-md-row align-items-end">
             <img class="structure-logo mx-3" src="{{ project.structure-logo | prepend: site.baseurl_root }}" alt="{{project.structure-logo-alt}}" />
