--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -23,7 +23,7 @@
   <h1 class="col-md-8 col-lg-6 display-2 fw-bold mx-auto">Amaury Butaux</h1>
   <div class="col-md-8 col-lg-6 mx-auto">
       <h2 class="ml-3 mt-4">
-      {% t titles.juniorgamedesigner %} <!--<small class="text-primary" id="Subtitles"></small>-->
+      {% t titles.current-role %} <!--<small class="text-primary" id="Subtitles"></small>-->
       </h2>
   </div>
 </div>
