added container-fat to nav

--- a/_includes/nav-compact.html
+++ b/_includes/nav-compact.html
@@ -1,5 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light d-block d-flex align-items-center">
-
+<nav class="container-fat navbar navbar-expand-lg navbar-light bg-light d-block d-flex align-items-center">
       <a href="{% tl home %}" class = "navbar-brand">
         <img class="rounded-circle" width="30" height="30" lt="Profile picture" src="{{ "/assets/images/photo_linkedin.webp" | prepend: site.baseurl_root }}" />
         <h1 class="h5 align-middle px-3 d-inline">Amaury Butaux</h1>
