--- a/_includes/nav-compact.html
+++ b/_includes/nav-compact.html
@@ -1,3 +1,4 @@
+<div class="bg-light">
 <nav class="container-fat navbar navbar-expand-lg navbar-light bg-light d-block d-flex align-items-center">
       <a href="{% tl home %}" class = "navbar-brand">
         <img class="rounded-circle" width="30" height="30" lt="Profile picture" src="{{ "/assets/images/photo_linkedin.webp" | prepend: site.baseurl_root }}" />
@@ -38,3 +39,4 @@
         </ul>
       </div>
     </nav>
+    </div>
