--- a/_includes/v-pill-tab-content.html
+++ b/_includes/v-pill-tab-content.html
@@ -7,3 +7,5 @@ role="tabpanel" aria-labelledby="v-pills-{{downcased}}-tab">
 <div class="tab-pane fade" id="v-pills-{{downcased}}"
 role="tabpanel" aria-labelledby="v-pills-{{downcased}}-tab">
 {% endif %}
+{{include.content}}
+</div>
